traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:6: error: not found: value getMonteLargeur
      else                 setPos(getMonteLargeur-j, i)
                                  ^